fixed 2-d rendering of exponentiation expressions in math demo -- it was broken in FF b/c apparently you can't have a tag called base''

--- a/demo/math.css
+++ b/demo/math.css
@@ -21,6 +21,10 @@ body {
   font-family: "PT Sans", Arial, Helvetica, sans-serif;
 }
 
+#input::-moz-placeholder {
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
+}
+
 #input.error {
   border-bottom: 2px solid maroon;
 }
